# smart-coop-analysis

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.defaults
main/: CMakeLists.txt  idf_component.yml  synthetic_autoencoder.h5  synthetic_autoencoder.tflite
main/include/: app_config.h  face_assets.h  hardware.h  lcd_face.h  mqtt_handler.h  rl_feedback.h  synthetic_inference.h  system_monitor.h  tinyml_task.h  web_server.h
main/include/model/: model_params.h  synthetic_autoencoder.h
main/src/: face_assets.cpp  hardware.cpp  lcd_face.cpp  main.cpp  mqtt_handler.cpp  rl_feedback.cpp  system_monitor.cpp  web_server.cpp
main/src/tinyml/: synthetic_inference.cpp  tinyml_task.cpp
